--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #dd434e;
+  --ifm-color-primary-dark: #d92b37;
+  --ifm-color-primary-darker: #cf2532;
+  --ifm-color-primary-darkest: #ab1f29;
+  --ifm-color-primary-light: #e15b65;
+  --ifm-color-primary-lighter: #e46870;
+  --ifm-color-primary-lightest: #ea8c93;
   --ifm-code-font-size: 95%;
 }
 
